--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,19 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.2.0.RELEASE'
-	id 'io.spring.dependency-management' version '1.1.3'
+	id "eclipse"
+	id "idea"
+
+	id 'org.springframework.boot' version '2.4.12'
+	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
 
-java {
-	sourceCompatibility = '17'
-}
+group = 'com.application'
+sourceCompatibility = 1.8
+
+//java {
+//	sourceCompatibility = '17'
+//}
 
 repositories {
 	mavenCentral()
@@ -24,6 +28,9 @@ dependencies {
 	implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
 	// For security configuration
 	implementation group: 'org.springframework.security', name: 'spring-security-core'
+
+	implementation 'org.springframework.data:spring-data-r2dbc:1.3.2'
+//	implementation 'io.r2dbc:r2dbc-pool:0.8.7.RELEASE'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
