--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,10 @@
 plugins {
 	id 'java'
-	id "eclipse"
-	id "idea"
-
 	id 'org.springframework.boot' version '2.4.12'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 }
 
-
 group = 'com.application'
-sourceCompatibility = 1.8
-
-//java {
-//	sourceCompatibility = '17'
-//}
 
 repositories {
 	mavenCentral()
@@ -29,8 +20,8 @@ dependencies {
 	// For security configuration
 	implementation group: 'org.springframework.security', name: 'spring-security-core'
 
-	implementation 'org.springframework.data:spring-data-r2dbc:1.3.2'
-//	implementation 'io.r2dbc:r2dbc-pool:0.8.7.RELEASE'
+	// mysql config
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '3.1.14'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -38,3 +29,13 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+springBoot {
+	buildInfo()
+}
+
+bootBuildImage {
+	imageName = "${rootProject.name}"
+}
+
+
